Fixed clear:both at the end of pages to stretch white background to fit contents.

--- a/media/stylesheets/twfa.css
+++ b/media/stylesheets/twfa.css
@@ -165,7 +165,7 @@ section#headline h1, section#headline p{
   padding-top: 10px;
 }
 section#content{
-  min-height: 700px;
+  min-height: 500px;
   background: #fff;
   padding-bottom: 10px;
   padding-top: 20px;
@@ -262,6 +262,10 @@ section#content h3 {
     color: #a0a0a0;
 }
 
+.clear {
+    clear:both;
+}
+
 /*
  * Media queries to adjust sizes for screens
  */
@@ -272,9 +276,6 @@ section#content h3 {
   section#headline{
     width: 1050px;
   }
-}
-div.clear{
-  height: 0px;
 }
 
 /*
